2017-08-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ampgsql.pl:Add --icremental, --remove-full-wal and
	  --remove-incremental-wal properties
	* man/xml-source/ampgsql.8.xml: Document new properties

2017-08-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: Check only VERSION_MAJOR and VESION_MINOR for
	  error code 1800002

2017-08-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/version.m4: Correctly set VERSION_COMMENT
	* perl/Amanda/Constants.pm.in.src: Set VERSION_MAJOR, VERSION_MINOR,
	  VERSION_PATCH and VERSION_COMMENT

2017-08-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ampgsql.pl: Add exclude-list and exclude-file to
	  backup operation

2017-08-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ampgsql.pl: exclude postmaster.pid, postmaster.opts
	  and pg_replslot/*

2017-08-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: s/vaulting/writing/

2017-08-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Chunker/Controller.pm (msg_ABORT): Set mesg from param

2017-08-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: Add error 36, 37 and 38

2017-08-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amflush.pl: Use the date specified by the user

2017-08-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* amar-src/amar.c: Fix race with stop/start_read when record are
	  already read

2017-08-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amutil.c, common-src/security-util.c: Fix getservbyport_r
	  with 4 arguments

2017-08-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amutil.c: Call correct variant of getservbyport_r
	* common-src/krb5-security.c: Call correct variant of getservbyname_r
	* common-src/security-util.c: Call correct variant of getservbyname_r
	* common-src/ambind.c: include netinet/in.h