@@ -118,3 +118,6 @@ Nikhil Bhupale <nikhilb@zmanda.com>
 
 Francis Galiegue <fgaliegue@gmail.com>
     Contributions made under GPLv2
+
+Chapman Flack <chap@anastigmatix.net>
+    Contributions made under BSD license
